# veri-quickbench

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  todo.md
.github/workflows/: publish.yml  test.yml
examples/src/: passthru.v
examples/testbench/: test_passthru.py  tf_config.py  tf_sigs.py
src/veri_quickbench/: __main__.py
src/veri_quickbench/tb_creator/: __init__.py  _create_testbench.py  _helpers.py  _verilog_iface.py  _verilog_module.py  _verilog_port.py  _verilog_reset.py  todo.txt
src/veri_quickbench/tb_creator/templates/: __init__.py  _template_header.py  _template_tf_config.py  _template_tf_sigs.py  _template_tf_uut.py  _template_verilog_tb.py
src/veri_quickbench/tb_endpoints/: __init__.py  _axi_ep.py  _axis_ep.py  _intfc.py  _sim_helpers.py
testbench/: README.md
tests/test_axi_ep/: test_axi_ep.py
tests/test_axis_ep/: test_axis_ep.py
