[project]
name = "veri-quickbench"
version = "0.0.1"
description = "tool to construct a MyHDL testbench for a Verilog module"
readme = "README.md"
requires-python = ">=3.8"
#dynamic = ["version"]
keywords = ["Verilog, MyHDL", "testbench", "verilog", "myhdl"]
authors = [
    {name = "Chip Lukes", email = "34627158+chiplukes@users.noreply.github.com" },
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
"questionary",
"myhdl",
"pyparsing"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/chiplukes/veri-quickbench"
Changelog = "https://github.com/chiplukes/veri-quickbench/releases"
Issues = "https://github.com/chiplukes/veri-quickbench/issues"
CI = "https://github.com/chiplukes/veri-quickbench/actions"

[project.optional-dependencies]
test = ["pytest","pytest-cov"]
dev = ["pre-commit","vulture"]


[tool.ruff]
line-length=120

[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "S",   # flake8-bandit
  "E",   # Pyflakes
  "F",   # Pycodestyle
  "I",   # Isort
  "PL",  # Pylint
  "RUF", # Ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S311","S101","PLR0915","PLR0913"]
"examples/testbench/*" = ["S311","S101","PLR0915","PLR0913","F841","S605"]

#[tool.mypy]
#strict = "True"
#implicit_reexport = "True"
#check_untyped_defs = true
#ignore_missing_imports = true
## Exclude type checking on files/dirs
#exclude = [
#  # TOML basic string (double-quotes, backslash and other characters need escaping)
#  # TOML literal string (single-quotes, no escaping necessary)
#]
